Refactor Web test environment setup steps
Removed Google Chrome installation steps and Xvfb setup from the Web test environment.

Signed-off-by: James Pether Sörling <pethers@users.noreply.github.com>

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -52,7 +52,7 @@ jobs:
             ${{ runner.os }}-apt-
 
       # Setup complete Web test environment
-      - name: Setup Web Test Environment (Chrome + Xvfb + Dependencies)
+      - name: Setup Web Test Environment
         run: |
           echo "🔧 Setting up complete Web test environment..."
 
@@ -72,33 +72,14 @@ jobs:
             libxfixes3 libxrandr2 libxrender1 \
             libxshmfence1 xdg-utils wget libxkbcommon0 xkb-data
 
-          # Install Google Chrome Stable for Web WebGL support
-          wget -qO- https://dl.google.com/linux/linux_signing_key.pub | sudo gpg --dearmor -o /usr/share/keyrings/google-chrome.gpg
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome.gpg] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-
           # Setup D-Bus for Chrome
           sudo mkdir -p /var/run/dbus
           sudo dbus-daemon --system --fork || true
                     
-          # Verify Chrome installation
-          google-chrome --version
-          echo "✅ Web test environment setup complete"
         env:
-          DISPLAY: ":99"
           XKB_DEFAULT_RULES: evdev
           XKB_DEFAULT_MODEL: pc105
           XKB_DEFAULT_LAYOUT: us
-
-      # Start Xvfb early for Playwright/Chrome
-      - name: Start Xvfb
-        run: |
-          echo "🖥️ Starting Xvfb virtual display..."
-          Xvfb :99 -screen 0 1920x1080x24 &
-          sleep 2
-          echo "DISPLAY=:99" >> $GITHUB_ENV
-          echo "✅ Xvfb started on display :99"
 
       # JavaScript/TypeScript setup
       - name: Setup Node.js
