--- a/.github/workflows/news-motions.lock.yml
+++ b/.github/workflows/news-motions.lock.yml
@@ -21,7 +21,7 @@
 #
 # For more information: https://github.github.com/gh-aw/introduction/overview/
 #
-# Generates EU Parliament motions and resolutions analysis articles for all 14 EU languages. Single article type per run.
+# Generates EU Parliament motions and resolutions analysis articles for all 14 languages. Single article type per run.
 #
 # gh-aw-metadata: {"schema_version":"v1","frontmatter_hash":"fb373e6c8ecdb81a0f82fb6ce809d9b2fae6cb92ba5f4c8c782e314a243f2157","compiler_version":"v0.49.6"}
 
@@ -1040,7 +1040,7 @@ jobs:
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
         env:
           WORKFLOW_NAME: "News: EU Parliament Motions"
-          WORKFLOW_DESCRIPTION: "Generates EU Parliament motions and resolutions analysis articles for all 14 EU languages. Single article type per run."
+          WORKFLOW_DESCRIPTION: "Generates EU Parliament motions and resolutions analysis articles for all 14 languages. Single article type per run."
           HAS_PATCH: ${{ needs.agent.outputs.has_patch }}
         with:
           script: |
