--- a/.github/workflows/news-propositions.lock.yml
+++ b/.github/workflows/news-propositions.lock.yml
@@ -21,7 +21,7 @@
 #
 # For more information: https://github.github.com/gh-aw/introduction/overview/
 #
-# Generates EU Parliament legislative propositions analysis articles for all 14 EU languages. Single article type per run.
+# Generates EU Parliament legislative propositions analysis articles for all 14 languages. Single article type per run.
 #
 # gh-aw-metadata: {"schema_version":"v1","frontmatter_hash":"60ddec0389395c22675622aa59ccbe197477029c58cc5d08f37806982e81696a","compiler_version":"v0.49.6"}
 
@@ -1040,7 +1040,7 @@ jobs:
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
         env:
           WORKFLOW_NAME: "News: EU Parliament Legislative Propositions"
-          WORKFLOW_DESCRIPTION: "Generates EU Parliament legislative propositions analysis articles for all 14 EU languages. Single article type per run."
+          WORKFLOW_DESCRIPTION: "Generates EU Parliament legislative propositions analysis articles for all 14 languages. Single article type per run."
           HAS_PATCH: ${{ needs.agent.outputs.has_patch }}
         with:
           script: |
