Update setup steps in copilot-setup-steps.yml
Refactor setup steps for test environment in GitHub Actions workflow.

Signed-off-by: James Pether Sörling <pethers@users.noreply.github.com>

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -51,30 +51,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-apt-
 
-      # Setup complete Web test environment
-      - name: Setup Test Environment
+      # Setup environment
+      - name: Setup Environment
         run: |
-          echo "🔧 Setting up complete Web test environment..."
+          echo "🔧 Setting up environment..."
 
-          # Install system dependencies for Web rendering
+          # Install system dependencies
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            libgtk2.0-0 libgtk-3-0 libgbm-dev libgbm1 \
-            libnotify-dev libnss3 libxss1 \
-            libxtst6 xauth \
-            graphviz ffmpeg \
-            fonts-noto fonts-noto-cjk fonts-noto-cjk-extra \
-            ca-certificates fonts-liberation \
-            libatk-bridge2.0-0 libatk1.0-0 libcups2 \
-            libdbus-1-3 libdrm2 libnspr4 \
-            libx11-xcb1 libxcomposite1 libxdamage1 \
-            libxfixes3 libxrandr2 libxrender1 \
-            libxshmfence1 xdg-utils wget libxkbcommon0 xkb-data
-                    
-        env:
-          XKB_DEFAULT_RULES: evdev
-          XKB_DEFAULT_MODEL: pc105
-          XKB_DEFAULT_LAYOUT: us
+            ca-certificates curl python3                    
 
       # JavaScript/TypeScript setup
       - name: Setup Node.js
